# MyInvicibleLibrary

Disk/: CMakeLists.txt  Data.json  DataBaseHandler.cpp  DataBaseHandler.h  ImageHandler.cpp  ImageHandler.h  Parse.h  Singleton.cpp  Singleton.h  main.cpp
Disk/DataStructures/: LinkedList.h  Node.h
InvincibleServer/: CMakeLists.txt  Controller.cpp  Controller.h  DataBase.cpp  DataBase.h  FaultTolerance.cpp  FaultTolerance.h  ImageHandler.cpp  ImageHandler.h  Singleton.cpp  Singleton.h  VideoHandler.cpp  VideoHandler.h  main.cpp
InvincibleServer/DataStructures/: LinkedList.h  Node.h
MyIDE/: CMakeLists.txt  GaleryHandler.cpp  GaleryHandler.h  Image.cpp  Image.h  ImagenHandler.cpp  ImagenHandler.h  Menu.cpp  Menu.h  MetaDataHandler.cpp  MetaDataHandler.h  Singleton.cpp  Singleton.h  main.cpp
MyIDE/DataStructures/: LinkedList.h  Node.h
huffman/: CMakeLists.txt  Data.json  Huffman.cpp  Huffman.h  MetaHandler.cpp  MetaHandler.h  Parse.h  Singleton.cpp  Singleton.h  main.cpp
